# actixjs

./: .editorconfig  .gitignore  Cargo.toml  index.d.ts  index.js  package.json  test.js
.github/workflows/: CI.yml
.yarn/releases/: yarn-3.5.0.cjs
__test__/: data.txt  data.xlsx  index.spec.ts  tls.spec.ts
__test__/certs/: pkcs8-cert.pem  pkcs8-key.pem
bechmark/: index.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/extras/: mod.rs  node_functions.rs  scheduler.rs
src/form/: constants.rs  error.rs  mod.rs  multipart.rs  parse.rs
src/napi/: buff_str.rs  bytes_recv.rs  fast_serde.rs  fast_str.rs  halfbrown.rs  mod.rs  postgres.rs  postgres_rows.rs  tsfn.rs
src/object_pool/: mod.rs
src/request/: helpers.rs  mod.rs  node_functions.rs  request_blob.rs  resp_utilities.rs  send_resp.rs
src/response/: mod.rs
src/router/: mod.rs  node_functions.rs  read_only.rs  store.rs
src/server/: actix_server.rs  config.rs  helpers.rs  mod.rs  node_functions.rs  shutdown.rs  tls.rs
src/templates/: mod.rs
src/tokio_workers/: mod.rs
